route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: granite-20-route
  labels:
    app: granite-20-lcpp-py
    shard: internal
spec:
  to:
    kind: Service
    name: granite-20-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow 
  wildcardPolicy: None
